Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -212,6 +212,10 @@ operation:
     x-api-key: your-api-key
 ```
 
+<Warning>
+  The response from your endpoint must be a JSON with the `result` property as part of it. For example `{ "result": "We have have open slots for Thursday and Friday."}`
+</Warning>
+
 ### Key Components of a Tool Definition:
 
 - : A unique identifier for the tool
