Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -213,7 +213,7 @@ operation:
 ```
 
 <Warning>
-  The response from your endpoint must be a JSON with the `result` property as part of it. For example `{ "result": "We have have open slots for Thursday and Friday."}`
+The response from your endpoint must be a JSON object containing a `result` property. For example: `{ "result": "We have open slots for Thursday and Friday." }`
 </Warning>
 
 ### Key Components of a Tool Definition:
