--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -86,26 +86,26 @@ The _conversationSettings_ object allows you to define the Autopilot's conversat
 
 The following is a list of the supported settings:
 
-| Setting                     | Description                                                                                                     |
-| --------------------------- | --------------------------------------------------------------------------------------------------------------- |
-| firstMessage                | The first message the Autopilot will say when the conversation starts                                           |
-| systemPrompt                | A prompt that describes the behavior of the Autopilot and sets the context of the conversation                  |
-| systemErrorMessage          | The message the Autopilot will say when an error occurs                                                         |
-| maxSessionDuration          |                                                                                                                 |
-| maxSpeechWaitTimeout        |                                                                                                                 |
-| initialDtmf                 | A DTMF to play when the conversation starts                                                                     |
-| transferOptions             | The options to transfer the call to a live agent                                                                |
-| transferOptions.phoneNumber | The phone number to transfer the call to                                                                        |
-| transferOptions.message     | The message to play before transferring the call                                                                |
-| transferOptions.timeout     |                                                                                                                 |
-| idleOptions                 | The options to handle idle time during the conversation                                                         |
-| idleOptions.message         | The message to play after the idle time is reached                                                              |
-| idleOptions.timeout         |                                                                                                                 |
-| idleOptions.maxTimeoutCount | The maximum number of times the idle message will be played before hanging up the call                          |
-| vad                         | The voice activity detection settings                                                                           |
-| vad.activationThreshold     |                                                                                                                 |
-| vad.deactivationThreshold   |                                                                                                                 |
-| vad.debounceFrames          |                                                                                                                 |
+| Setting                     | Description                                                                                                     | Default Value        |
+| --------------------------- | --------------------------------------------------------------------------------------------------------------- | -------------------- |
+| firstMessage                | The first message the Autopilot will say when the conversation starts                                           |                      |
+| systemPrompt                | A prompt that describes the behavior of the Autopilot and sets the context of the conversation                  |                      |
+| systemErrorMessage          | The message the Autopilot will say when an error occurs                                                         |                      |
+| maxSessionDuration          |                                                                                                                 | 1800000 (30 minutes) |
+| maxSpeechWaitTimeout        |                                                                                                                 | 0                    |
+| initialDtmf                 | A DTMF to play prior to starting the conversation                                                               |                      | 
+| transferOptions             | The options to transfer the call to a live agent                                                                |                      |
+| transferOptions.phoneNumber | The phone number to transfer the call to                                                                        |                      |
+| transferOptions.message     | The message to play before transferring the call                                                                |                      |
+| transferOptions.timeout     |                                                                                                                 | 30000                |
+| idleOptions                 | The options to handle idle time during the conversation                                                         |                      |
+| idleOptions.message         | The message to play after the idle time is reached                                                              |                      |
+| idleOptions.timeout         |                                                                                                                 | 10000                |
+| idleOptions.maxTimeoutCount | The maximum number of times the idle message will be played before hanging up the call                          | 2                    |
+| vad                         | The voice activity detection settings                                                                           |                      |
+| vad.activationThreshold     |                                                                                                                 | 0.4                  |
+| vad.deactivationThreshold   |                                                                                                                 | 0.25                 |
+| vad.debounceFrames          |                                                                                                                 | 4                    |
 
 A few noteworthy settings include the _maxSpeechWaitTimeout_, _initialDtmf_, _idleOptions_, and _vad_.
 
