--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -45,26 +45,13 @@ intelligence:
       temperature: 0.4
 ```
 
-Then, create a script to apply the configuration as follows:
+Then, create the application as follows:
 
-```javascript apply-autopilot-config.js {6}
-const fs = require("fs");
-const yaml = require("js-yaml");
-const SDK = require("@fonoster/sdk");
-
-// Use "fonoster workspaces:active" to get the Workspace Access Key Id
-const client = new SDK.Client({ accessKeyId: "WO00000000000000000000000000000000" });
-
-const appConfig = yaml.load(fs.readFileSync("./appConfig.yaml", "utf8"));
-
-client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
-  .then(() => (new SDK.Applications(client)).createApplication(appConfig))
-  .catch(console.error);
+```bash
+fonoster applications:create --from-file appConfig.yaml
 ```
 
-Please note that you must install the `js-yaml` and the `@fonoster/sdk` dependencies in your Node.JS project.
-
-Once you create the application, you can use the _updateApplication_ function instead of _createApplication_ to quickly iterate over your Autopilot.
+Similarly, to update the application, you can use the `applications:update` command with the `from-file` flag.
 
 ## General configuration
 
